--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # "/" + 仓库的名字. 资源文件的路径组成部分
-baseurl: "/Girls-Coding-Day-Jekyll-blog-4"
+baseurl: "/记录我的生活（2）"
 
 # 网页的标题
-title: "Girls Coding Day"
-username: yourname
-# 网站副标题
-description: "架起女性与编程的桥梁"
+title: "我的生活"
+username: 憨憨子
+# 憨憨子的快乐生活
+description: "好嗨哟"
 
 aboutme: "我的生活，工作 😉🍕🎧"
 
